--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                             <ion-icon name="call-outline"></ion-icon>
                             <div class="info">
                                 <div class="head">Telefone</div>
-                                <div class="sub-title">(98) 99972-0433</div>
+                                <div class="sub-title">(98) 00000-0000</div>
                             </div>
                </div>
                <div class="row">
                 <ion-icon name="person-outline"></ion-icon>
                 <div class="info">
                     <div class="head">Email</div>
-                    <div class="sub-title">emanuelsouza1991@hotmail.com <br>emanuelsouza1991@gmail.com</div>
+                    <div class="sub-title">emanuelsouza@hotmail.com <br>emanuelsouza@gmail.com</div>
                 </div> 
                
                
