teste de pipeline

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
+                <p style="color: white;">Testando pipelines</p>
                 <div class="text-1">Ola, meu nome é</div>
                 <div class="text-2">Emanuel Souza</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
