--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="column right">
                     <div class="text">Sou Emanuel e sou <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
-                    <a href="/curriculo/CURRICULUM EMANUEL.pdf" target="_blank">Download CV</a>
+                    <a href="#" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
 
 <!--sessão  footer rodapé-->
 <footer>
-<span>:D<a href="#">Emanuel</a> | 2023</span>
+<span>:D<a href="#">Emanuel</a> | 2024</span>
 </footer>
 <style>
   
