--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+
     <title>Portifólio Emanuel</title>
 </head>
 <body>
@@ -24,6 +26,14 @@
             </ul>
             <div class="menu-btn">
                 <ion-icon name="menu-outline"></ion-icon>
+                <ul class="menu">
+                    <li><a href="#home" class="menu-link">Inicio</a></li>
+                    <li><a href="#about" class="menu-link">Sobre</a></li>
+                    <li><a href="#services" class="menu-link">Serviços</a></li>
+                    <li><a href="#skills" class="menu-link">Especialidade</a></li>
+                    <li><a href="#contact" class="menu-link">Contato</a></li>
+                </ul>
+                
             </div>
         </div>
     </div>
@@ -45,7 +55,7 @@
         <div class="max-width">
             <h2 class="title">Sobre mim</h2>
             <div class="about-content">
-                <div class="column left">
+                <div class="column-left">
                     <img src="imagens/foto1.jpeg" alt="">
                 </div>
                 <div class="column right">
@@ -209,7 +219,11 @@
 <style>
   
 </style>
-    
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
