--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="max-width">
             <h2 class="title">Sobre mim</h2>
             <div class="about-content">
-                <div class="column-left">
+                <div class="column left">
                     <img src="imagens/foto1.jpeg" alt="">
                 </div>
                 <div class="column right">
